Add database connection

--- a/ToDoAppServer/src/main/resources/application.properties
+++ b/ToDoAppServer/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.application.name=ToDoAppServer
-server.port=8000
+
+# spring-datasource
+spring.datasource.url=localhost:5432
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+server.port=8080
