--- a/ToDoAppServer/src/main/resources/application.properties
+++ b/ToDoAppServer/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+management.endpoints.web.exposure.include=*
+
 
 server.port=8080
